# levi

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODEBASE_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  lessons.scratch  pyproject.toml  spt.sh  test_prompt_compliance.py  viz_circle_packing.py
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
algoforge/: __init__.py  _config.py
algoforge/behavior/: __init__.py  extractor.py  features.py  generalized.py
algoforge/budget/: __init__.py  exceptions.py  manager.py
algoforge/config/: __init__.py  models.py
algoforge/core/: __init__.py  evaluation.py  program.py  types.py
algoforge/database/: __init__.py  memory.py  protocol.py
algoforge/equilibrium/: __init__.py  equilibrium.py  prompts.py
algoforge/evaluator/: __init__.py  protocol.py  sandboxed.py
algoforge/init/: diversifier.py
algoforge/island/: __init__.py  coordinator.py  diversifier.py  multi_island_pe.py  runner.py
algoforge/llm/: __init__.py  client.py  exceptions.py  schemas.py  unified_client.py
algoforge/methods/: __init__.py  algoforge.py  alphaevolve.py
algoforge/pipeline/: __init__.py  consumer.py  producer.py  runner.py  state.py
algoforge/pool/: __init__.py  cvt_map_elites.py  protocol.py  simple.py
algoforge/prompt_opt/: __init__.py  optimizer.py
algoforge/utils/: __init__.py  evaluation.py  resilient_pool.py
docs/examples/: bin_packing.py
examples/: README.md
examples/ADRS/: README.md
examples/arc_agi_2/: problem.py  run_levi.py
examples/bo_next_queries_levi/: README.md  problem.py  run.py
examples/cant_be_late/: analyze_diversity.py  optimize_prompts.py  optimized_prompts.json  problem.py  run_algoforge.py  run_algoforge_po.py  run_levi_po.py
examples/cant_be_late_multi/: optimize_prompts.py  optimized_prompts.json  problem.py  run_algoforge_po.py  run_levi_po.py
examples/circle_packing/: README.md  problem.py  render.py  result_snapshot.json  run.py  run_claude.py  run_levi.py
examples/cloudcast/: evolution_state.json  problem.py  prompts.py  run.py
examples/discobench_greenhouse_gas_single_slice/: README.md  plot_best_mse_first70.py  problem.py  run.py
examples/eplb/: analyze_mutations.py  centroids.json  compare_prompts.py  evolution_state.json  lb_monitor.sh  load_balancer.py  optimize_prompts.py  optimize_v2.py  optimized_prompts.json  problem.py  prompts.py  run.py  run_algoforge.py  run_algoforge_po.py  run_levi_po.py  sample_elite_1.py  sample_elite_2.py  sample_elite_3.py
examples/hotpotqa/: problem.py  run.py
examples/hover/: problem.py  run.py
examples/ifbench/: analyze_init_count.py  budget_tradeoff.py  budget_tradeoff_kmedoids.py  budget_tradeoff_ridge.py  compare_calibration_diversity.py  compare_proxy_methods.py  compare_with_diverse.py  official_adapter.py  plot_init_count.py  problem.py  run.py  score_diverse_prompts.py  score_on_test.py  visualize_method_predictions.py  visualize_ranking_comparison.py
examples/pupa/: problem.py  (+2 more)
infra/: launch_qwen.sh  launch_script.sh  launch_v16.sh  load_balancer.py
levi/: __init__.py
runs/: e1_state.json
tests/: __init__.py  test_alphaevolve.py  test_budget.py  test_cli_clients.py  test_client.py  test_component_selector.py  test_config_models.py  test_core.py  test_discobench_greenhouse_gas_single_slice.py  test_ifbench_problem.py  test_integration.py  test_methods_helpers.py  test_pipeline_consumer.py  test_pipeline_flow_control.py  test_pipeline_state.py  test_pool.py  test_prompt_builder.py  test_prompt_bundle.py  test_prompt_bundle_adapter.py  test_prompt_opt.py  test_proxy_benchmark.py  test_pupa_problem.py  test_structured_diff.py  test_unified_client.py
(+290 files in other folders)
