[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algoforge"
version = "0.1.0"
description = "AlgoForge: Evolutionary optimization framework for algorithms"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.3.5",
    "litellm>=1.81.16",
    "scikit-learn>=1.4.0",
    "colorama>=0.4.6",
    "dspy>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
example-eplb = [
    "torch>=2.9.1",
]
example-llm-sql = [
    "pandas>=2.3.3",
]
example-viz = [
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
]
examples = [
    "torch>=2.9.1",
    "pandas>=2.3.3",
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
]

[tool.hatch.build.targets.wheel]
packages = ["algoforge"]
